# mcp-sonarqube

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .semgrepignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_SETUP.md  MIGRATION.md  MIGRATION_GUIDE.md  Makefile  Plan_Sprints_SonarQube_MCP.md  README.md  SECURITY.md  SPECIALIZED_WORKFLOWS_STRATEGY.md  SUPPORT.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci-cd.yml  ci.yml  docker-quality.yml  docker-sast.yml  javascript-quality.yml  javascript-sast.yml  python-quality.yml  python-sast.yml
Documentacion/: DOCUMENTACION.txt
config/: config.yaml
docker/: .gitignore  MIGRATION_GUIDE.md  README.md
docker/compose/base/: docker-compose.yml
docker/compose/environments/: staging.yml  (+2 more)
docker/config/: README.md
docker/dockerfiles/: mcp-server.Dockerfile  mcp-server.prod.Dockerfile  streamlit.Dockerfile  streamlit.prod.Dockerfile
docker/environments/: .env.development  .env.development.example  .env.production  .env.staging
docker/scripts/: backup-restore.sh  build.sh  config-reload.sh  deploy.sh  graceful-shutdown.sh  health-check.sh  init-services.sh  log-aggregator.sh  manage-secrets.sh  resource-monitor.sh  start-dev.bat  start-dev.sh  start-streamlit.sh  validate-config.sh
docs/: makefile-guide.md  mcp_tools.md  pydantic_v2_migration.md
docs/api/: mcp-tools.md
docs/developer/: architecture.md
docs/troubleshooting/: common-issues.md
docs/user-guide/: setup-guide.md
examples/: demo_advanced_reporting.py  demo_chat_interface.py
k8s/: ingress.yaml  mcp-server.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  sonarqube.yaml  streamlit-app.yaml
scripts/: README.md  docker-helper.sh  fix_pydantic_v2.py  generate_docs.py
scripts/backup/: backup.sh  docker-backup.sh  docker-restore.sh  restore.sh
scripts/deploy/: deploy.sh  docker-deploy.sh
scripts/testing/: comprehensive-sast.sh  load-test.sh  run-tests.sh  security-audit.sh  simple-load-test.sh
src/: __init__.py  debug_mcp_registration.py  inspect_function_tool.py  test_function_tool_fix.py  test_imports.py  test_mcp_client_final.py  test_streamlit_fixes.py
src/mcp_server/: __init__.py  cache_manager.py  config.py  docs_generator.py  health_server.py  server.py
src/sonarqube_client/: __init__.py  client.py  exceptions.py  models.py  rate_limiter.py  validators.py
src/streamlit_app/: __init__.py  app.py  health.py
src/utils/: __init__.py  cache.py  logger.py
tests/fixtures/: sonarqube_responses.py
tests/integration/: test_advanced_tools_integration.py  test_comprehensive_system_integration.py  test_enhanced_chat_interface.py  test_reports_page.py  test_system_integration_minimal.py
tests/ui/: test_chat_interface.py  test_end_to_end_workflows.py  test_performance_ui.py  test_streamlit_ui.py  test_ui_workflows.py
tests/unit/: test_advanced_visualization.py  test_cache_manager.py  test_chat_parsing.py  test_issues_tools.py  test_mcp_integration.py  test_mcp_tools.py  test_models.py  test_prompts.py  test_pydantic_v2_integration.py  test_quality_gates_tools.py  test_rate_limiter.py  test_rate_limiter_standalone.py  test_resources.py  test_security_tools.py  test_simple_models.py  test_sonarqube_client.py  test_streamlit_auth.py  test_streamlit_config.py  test_streamlit_service.py  test_streamlit_session.py  test_validators.py
(+71 files in other folders)
